--- a/styles/css/markdown-styles.css
+++ b/styles/css/markdown-styles.css
@@ -2,13 +2,18 @@
   font-size: 1.125rem;
   line-height: 1.75rem;
   line-height: 1.625;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .markdown p,
-.markdown ul,
-.markdown ol,
 .markdown blockquote {
-  margin: 1.5rem 10% 1.5rem 10%;
+  margin: 1.5rem 0 1.5rem 0;
+}
+
+.markdown ul,
+.markdown ol {
+  margin: 1.5rem 10% 1.5rem 10%
 }
 
 .markdown p {
@@ -19,8 +24,6 @@
   font-size: 1.875rem;
   margin-top: 3rem;
   margin-bottom: 1rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
   line-height: 1.375;
 }
 
