--- a/styles/css/markdown-styles.css
+++ b/styles/css/markdown-styles.css
@@ -21,6 +21,7 @@
 }
 
 .markdown h2 {
+  font-family: monospace;
   font-size: 1.875rem;
   margin-top: 3rem;
   margin-bottom: 1rem;
@@ -28,6 +29,7 @@
 }
 
 .markdown h3 {
+  font-family: monospace;
   margin-top: 2rem;
   font-size: 1.5rem;
   line-height: 2rem;
